@@ -24,7 +24,8 @@ import gnome.vfs
 ################################################################################
 # Operations used on AudioMastering
 #
-
+# 
+# 44100hz * 16bit * 2channels / 8bits = 176400 bytes per sec
 class AddFile (audio.AudioMetadataListener, operations.Operation):
 	# TODO: Implement full Operation here
 	
