@@ -30,6 +30,7 @@ from converting import FetchMusicList
 from recording import RecordMusicList
 import operations, nautilus_burn, gtk_util
 from preferences import RecordingPreferences
+from operations import MapProxy
 
 class RecordingMedia (operations.OperationsQueueListener):
 	def __init__ (self, music_list, preferences, parent = None):
@@ -101,7 +102,7 @@ class RecordingMedia (operations.OperationsQueueListener):
 		self.__prog.hide ()
 		gobject.source_remove (self.__source)
 	
-
+# TODO make this actually beautiful
 class MainWindow (gtk.Window):
 	def __init__ (self, masterer):
 		gtk.Window.__init__ (self, gtk.WINDOW_TOPLEVEL)
@@ -109,23 +110,46 @@ class MainWindow (gtk.Window):
 		self.masterer.listeners.append (self)
 		g = gtk.glade.XML ("serpentine.glade", "main_window_container")
 		self.add (g.get_widget ("main_window_container"))
-		btn = g.get_widget ("add")
-		btn.connect ("clicked", self.add_file)
+		self.set_title ("Serpentine")
+		
+		# Add a file button
+		g.get_widget ("add").connect ("clicked", self.add_file)
+		g.get_widget ("add_mni").connect ("activate", self.add_file)
+		
+		# record button
 		g.get_widget("burn").connect ("clicked", self.burn)
-		self.connect("destroy", self.quit)
+		
+		# masterer widget
 		box = self.get_child()
 		masterer.show()
 		box.add (masterer)
-		w = g.get_widget ("mni_preferences")
-		w.connect ('activate', self.__on_preferences)
-		self.remove_btn = g.get_widget ("remove")
-		self.remove_btn.connect ("clicked", self.remove_file)
-		self.remove_btn.set_sensitive (False)
-		self.clear_btn = g.get_widget ("clear")
-		self.burn_btn = g.get_widget ("burn")
-		self.burn_btn.set_sensitive (False)
-		self.clear_btn.connect ("clicked", self.clear_files)
-		self.clear_btn.set_sensitive (False)
+		
+		# preferences
+		g.get_widget ("preferences_mni").connect ('activate', self.__on_preferences)
+		
+		# setup remove buttons
+		self.remove = MapProxy ({'menu': g.get_widget ("remove_mni"),
+		                         'button': g.get_widget ("remove")})
+
+		self.remove['menu'].connect ("activate", self.remove_file)
+		self.remove['button'].connect ("clicked", self.remove_file)
+		self.remove.set_sensitive (False)
+		
+		# setup record button
+		self.burn = g.get_widget ("burn")
+		self.burn.set_sensitive (False)
+		
+		# setup clear buttons
+		self.clear = MapProxy ({'menu': g.get_widget ("clear_mni"),
+		                        'button': g.get_widget ("clear")})
+		self.clear['button'].connect ("clicked", self.clear_files)
+		self.clear['menu'].connect ("activate", self.clear_files)
+		self.clear.set_sensitive (False)
+		
+		# setup quit menu item
+		g.get_widget ("quit_mni").connect ('activate', self.quit)
+		self.connect("destroy", self.quit)
+		
 		self.__last_path = None
 		self.__add_file = gtk.FileChooserDialog (buttons = (gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_OPEN,gtk.RESPONSE_OK))
 		self.__add_file.set_select_multiple (True)
@@ -145,12 +169,12 @@ class MainWindow (gtk.Window):
 		sys.exit (0)
 		
 	def on_selection_changed (self, *args):
-		self.remove_btn.set_sensitive (self.masterer.count_selected() > 0)
+		self.remove.set_sensitive (self.masterer.count_selected() > 0)
 		
 	def on_contents_changed (self, *args):
 		is_sensitive = len(self.masterer.source) > 0
-		self.clear_btn.set_sensitive (is_sensitive)
-		self.burn_btn.set_sensitive (is_sensitive)
+		self.clear.set_sensitive (is_sensitive)
+		self.burn.set_sensitive (is_sensitive)
 
 	def remove_file (self, *args):
 		self.masterer.remove_selected()
